--- a/src/main/resources/assets/minez-help-menu/lang/en_us.json
+++ b/src/main/resources/assets/minez-help-menu/lang/en_us.json
@@ -57,7 +57,7 @@
   "menu.minez_help.description.recipes": "Recipes - §cWork in progress!",
   "menu.minez_help.description.items": "Items - §cWork in progress!",
   "menu.minez_help.description.locations": "Locations - §cWork in progress!",
-  "menu.minez_help.description.dungeons": "Dungeons - §cWork in progress!",
+  "menu.minez_help.description.dungeons": "In the world of MineZ, there are many dungeons.\nA dungeon is a location or section of another location specifically dedicated to challenging the player in a trial or set of trials of parkour, puzzles, and combat, usually with loot or a legendary item at the end. They heavily vary in difficulty, some being easy to complete alone while others can be challenging even with a skilled group, with the more challenging dungeons rewarding better and more loot at the end. Most dungeons contain a legendary, however, some do not.",
   "menu.minez_help.description.lootchests": "Loot Chests - §cWork in progress!",
   "menu.minez_help.description.achievements": "Achievements - §cWork in progress!",
   "menu.minez_help.description.lore": "Lore and Quest Lines - §cWork in progress!",
