--- a/src/main/resources/assets/minez-help-menu/lang/en_us.json
+++ b/src/main/resources/assets/minez-help-menu/lang/en_us.json
@@ -22,7 +22,7 @@
   "menu.minez_help.button12": "Dungeons",
   "menu.minez_help.button13": "Loot Chests",
   "menu.minez_help.button14": "Achievements",
-  "menu.minez_help.button15": "MineZ Lore",
+  "menu.minez_help.button15": "MineZ Lore & Quest lines",
   "menu.minez_help.pageback": "Previous page",
   "menu.minez_help.next": "Next page",
   "menu.minez_help.webmap": "MineZ Map",
@@ -44,7 +44,7 @@
   "menu.minez_help.menu12.title": "§f§lDungeons",
   "menu.minez_help.menu13.title": "§f§lLoot Chests",
   "menu.minez_help.menu14.title": "§f§lAchievements",
-  "menu.minez_help.menu15.title": "§f§lLore",
+  "menu.minez_help.menu15.title": "§f§lMineZ Lore & Quest lines",
 
   "menu.minez_help.description.gettingstarted": "§3§lThe Basics:§f\n\n§f§l•§f MineZ is a zombie apocalypse game, so horde of zombies and some zombie-ish mobs such as zombie pigmen and wolves await! There may be other more terrifying creatures out there.\n\n§l•§f The experience level is your thirst level. 25 is the maximum amount of hydration you can have, but don't let it get to 0 otherwise you will start to dehydrate and die! You can only replenish it by drinking from your water bottle or by eating.\nFor long journeys, it may be wiser to carry more than one water bottle and refill it in every town with water. We recommend drink a water bottle when your thirst level is between 2-0.\n\n§l•§f The experience bar is the zombies' visibility level on you. The higher your visibility, the further and easier can a zombie spot you! You can sneak to keep your visibility to a minimum, but sprinting (even in water) and jumping will greatly increase your visibility and make you an easier target for zombies!\n\n§l•§f In MineZ the zombies are faster, stronger and smarter than the ones you can find in Vanilla Minecraft. They are as fast as a sprinting person, but if they lose sight of you they find go back to your previous location to trap you.\n\n§l•§f Chatting System is also modified. It is divided into Local and Global. Local shows player messages at a distance of 250m and less from you. Global displays all messages when the player uses ! At the beginning of their message.\n\n§l•§f Spawn into the world by Talking to the NPC next to the fountain. When you first spawn, you will spawn with a water bottle, a wooden sword, and a bandage.\n\n§l•§f You can buy other things with XP on the XP Shop to add to your Spawn Kit as well as getting them from achievements.\n\n§l•§f Playing on MineZ you have two types of servers to choose from PVP and PVE. PVE servers are only for players who buy a rank on the server's website. PVP servers, also called Public, also have a small part of the map with PVE, this is an area up to Z= -100, then there is a PVP zone.\n\n\n§3§lTypes of Players:§f\n  §l•§f §cBandits §fare players that will kill anyone else on sight. They are categorized into several types: Leather Bandits, Iron Roamers, Tricksters and Massacre Teams. Leather Bandits are newly spawned bandits that hit anyone in sight despite having poor gear. Iron Roamers are iron-clad bandits that wander around the map, killing usually to obtain health potions. Tricksters are bandits who pretend to befriend you before killing you. Massacre Teams are small groups of well-armed bandits that loot town by town. They can easil noy be spotted with sprinting players, clans of iron bandits and large slews of death messages appearing on the chat as they battle other groups of players.\n\n  §l•§f §aHealers§f are players that do not attack people on sight, but rather heal them and supply them with food, armor, gear etc. to send them on their way. However, do not let this facade of a friendly player fool you -occasionally, healers may be luring people with low health to them so they may kill them, as well as the fact that if you plan on becoming a healer, people may see you as a lesser-defended target and hunt you down. Healers that have healed 16 different people will have the Healer tag as a sign to others that they are reliable healers to trust.\n\n\n§3§lBasic Tips for Surviving:§f\n  §l•§f It may be very useful for you to use the MineZ Map: This map of MineZ will show you the coordinates of all locations, where the chests are and what type of chest are they and information on all locations, including warnings and zombie spawn rates.\n\n  §l•§f Before heading North it is extremely important that you have at least more than one water bottle and stock up on food as long journeys will consume a lot of water and hunger. Do not start heading North until you have obtained both of those.\n\n  §l•§f If a group of zombies spawn within a relatively close proximity to you, try to sneak to lower your visibility and keep your chances of getting spotted to the bare minimum.\n\n  §l•§f In every town you go to that has a water source, refill your water bottles, drink from it and then refill it again as your first priority. Then, after you are done looting refill it, drink it and refill it back. This will ensure that you never run out of water or take any unnecessary damage from dehydration.",
   "menu.minez_help.description.thirstvisibility": "Thirst and Visibility are mechanics added in to MineZ that are not found in Vanilla Minecraft. Unlike bleeding and infection, these mechanics cannot be remedied or removed, but their effect can be delayed or reduced. See the categories below for additional information about the mechanics.\n\n§3§lThirst:§f\n  §l•§f Thirst is an added mechanic similar to Hunger. It is indicated by the number of levels you have above your visibility (experience) bar, with 25 representing full. Over time, a player's thirst will drain, taking approximately 15 minutes to fully deplete. Thirst will always deplete over time, whether you're moving or not, so it is not recommended to remain idle for long periods of time.\n\n  §l•§f Should you reach 0 thirst, you will begin taking a heart of damage every second until you either drink some water or die of dehydration.\n\n  §l•§f The most known way to restore your thirst is to drink a water bottle. Drinking water will always bring your thirst back to 20, so it is recommended you only drink when next to a water source or while your thirst is less than 3. Always be sure to keep extra water bottles on hand as many areas do not have a source near them. The water bottle is a default item on the spawn kit for a MineZ player.\n\n  §l•§f There are also other ways of bringing your thirst level up such as consuming various fresh foods like carrots or melons.\n\n§3§lFresh Water:§f\n  §l•§f Fresh Water is obtained by filling your water bottle from a source like a cauldron or by boiling a regular bottle of water in a furnace, instead of taking it straight from a well or ocean. Drinking Fresh Water will enable you to enjoy 25 thirst and half a heart of regeneration.\n\n§3§lHunger:§f\n  §l•§f Hunger in MineZ works very similarly to Vanilla Hunger even though some of the variables such as the saturation or nutritional values differ from Minecraft’s default ones. Below you will find a table with a full list of values they are also visible in the descriptions of items.\n\n§3§lVisibility:§f\n  §l•§f Visibility is represented by the exper.ience bar shows the range at which a mob will be able to 'hear' you or detect you. The higher the bar goes, the wider your detection range becomes. Movement will make the bar go up. Standing still while crouching will produce the least amount of sound, while sprint-jumping will produce the most sound. At night time, your visibility will decrease by a small amount. Certain items can make a lot of noise, such as Snowballs and Grenades, which are useful for either drawing attention to or away from you.\n\n  §l•§f Other items, such as the Zombie Head can lower your visibility, or eliminate it completely. For escaping from zombies, it is recommended to throw a snowball at your feet as it will 'stun' the zombies for a brief moment, giving you enough time to get away. Shovels also work similarly. If you hit a zombie with a shovel it will stun them for 4 seconds.\n\n§3§lFood variables table:§f",
@@ -60,7 +60,7 @@
   "menu.minez_help.description.dungeons": "In the world of MineZ, there are many dungeons. A dungeon is a location or section of another location specifically dedicated to challenging the player in a trial or set of trials of parkour, puzzles, and combat, usually with loot or a legendary item at the end. They heavily vary in difficulty, some being easy to complete alone while others can be challenging even with a skilled group, with the more challenging dungeons rewarding better and more loot at the end. Most dungeons contain a legendary, however, some do not.",
   "menu.minez_help.description.lootchests": "Loot chests are a unique feature to MineZ and can be found at nearly every location across Valar. Loot chests can be right-clicked to access the items inside or left-clicked to break them and scatter their loot on the ground. A loot chest will automatically break if closed with no items remaining in its inventory.\n\nThe contents of a loot chest depend on the chest's classification and tiering, which are signified by the title above a chest's inventory when opened. In general, higher tier loot chests contain better items. For example, a Potion Rare loot chest will provide more potent healing brews than a Potion Common chest would. Each type of loot chest has its own specialized loot table which determines what items may be found within and how likely they are to appear. It is important to note that any given loot chest may only contain items from its designated loot table, so a Military loot chest will not contain an item found within a Civilian loot chest unless their loot tables share said item.\n\nEvery time a loot chest respawns, the items inside are randomized based on the chest's loot table. A loot chest will respawn when enough time has passed and there are no nearby players (although loot chests in spawn towns do not have the latter requirement). Every chest has a unique number of minimum and maximum items it can spawn with. Chests that are difficult or dangerous to reach typically have higher minimum and maximum amounts than other chests, however they might respawn slower or require players to be further away than normal.\n\nOccasionally a loot chest will take the physical appearance of a trapped chest. This indicates that the loot chest contains a zombie within it, which will jump out and attack the player if the chest is opened or broken. This zombie carries all the contents of the loot chest, and will equip any applicable items such as weapons and armor. On death, the zombie will drop all of the items it holds.\n\nA location's loot chests can be determined by manually opening each chest in the location, checking the location's wiki page, or zooming in on the location on the MineZ Map.",
   "menu.minez_help.description.achievements": "Achievements - §cWork in progress!",
-  "menu.minez_help.description.lore": "Lore and Quest Lines - §cWork in progress!",
+  "menu.minez_help.description.lore": "There are two “Quest lines” in our beloved MineZ\n\n§3§lEmerald Quest§f\n\n§cWork in progress!\n\n§3§lPath Of The Eclipsed§f\n\n§cWork in progress!",
 
 
   "menu.minez_help.title.mobs.hostile.others.zombie": "Zombie:",
@@ -87,7 +87,40 @@
   "menu.minez_help.menu.scorchers.button": "Scorchers",
   "menu.minez_help.menu.ocelot.button": "Ocelot",
   "menu.minez_help.menu.wolf.button": "Wolf",
-
+  "menu.minez_help.title.loot.chests.food": "FOOD",
+  "menu.minez_help.description.loot.chests.food": "FOOD",
+  "menu.minez_help.food_loot_table.headers[0]": "Item Name",
+  "menu.minez_help.food_loot_table.headers[1]": "Tool Common",
+  "menu.minez_help.food_loot_table.headers[2]": "Tool Uncommon",
+  "menu.minez_help.food_loot_table.headers[3]": "Tool Rare",
+  "menu.minez_help.food_loot_table.rows[0][0]": "Apple",
+  "menu.minez_help.food_loot_table.rows[0][1]": "§a25.0%",
+  "menu.minez_help.food_loot_table.rows[0][2]": "§e14.0%",
+  "menu.minez_help.food_loot_table.rows[0][3]": "§c0.0%",
+  "menu.minez_help.food_loot_table.rows[1][0]": "2 Apples",
+  "menu.minez_help.food_loot_table.rows[1][1]": "§c0.0%",
+  "menu.minez_help.food_loot_table.rows[1][2]": "§e5.0%",
+  "menu.minez_help.food_loot_table.rows[1][3]": "§e15.0%",
+  "menu.minez_help.food_loot_table.rows[2][0]": "Carrot",
+  "menu.minez_help.food_loot_table.rows[2][1]": "§a25.0%",
+  "menu.minez_help.food_loot_table.rows[2][2]": "§e15.0%",
+  "menu.minez_help.food_loot_table.rows[2][3]": "§c0.0%",
+  "menu.minez_help.food_loot_table.rows[3][0]": "Melon",
+  "menu.minez_help.food_loot_table.rows[3][1]": "§a20.0%",
+  "menu.minez_help.food_loot_table.rows[3][2]": "§c0.0%",
+  "menu.minez_help.food_loot_table.rows[3][3]": "§c0.0%",
+  "menu.minez_help.food_loot_table.rows[4][0]": "2 Melons",
+  "menu.minez_help.food_loot_table.rows[4][1]": "§e5.0%",
+  "menu.minez_help.food_loot_table.rows[4][2]": "§e15.0%",
+  "menu.minez_help.food_loot_table.rows[4][3]": "§c0.0%",
+  "menu.minez_help.food_loot_table.rows[5][0]": "3 Melons",
+  "menu.minez_help.food_loot_table.rows[5][1]": "§c0.0%",
+  "menu.minez_help.food_loot_table.rows[5][2]": "§e5.0%",
+  "menu.minez_help.food_loot_table.rows[5][3]": "§c0.0%",
+  "menu.minez_help.food_loot_table.rows[6][0]": "4 Melons",
+  "menu.minez_help.food_loot_table.rows[6][1]": "§c0.0%",
+  "menu.minez_help.food_loot_table.rows[6][2]": "§c0.0%",
+  "menu.minez_help.food_loot_table.rows[6][3]": "§e15.0%",
 
   "menu.minez_help.thirst_table.headers[0]": "Item",
   "menu.minez_help.thirst_table.headers[1]": "Hunger",
